--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,13 +15,28 @@
         android:theme="@style/Theme.EcoTrack"
         tools:targetApi="31">
         <activity
+            android:name=".LogWaste"
+            android:exported="false" />
+        <activity
+            android:name=".WasteHistory"
+            android:exported="false" />
+        <activity
+            android:name=".TipsResources"
+            android:exported="false" />
+        <activity
+            android:name=".CommunityChallenges"
+            android:exported="false" />
+        <activity
+            android:name=".CommunityChallengesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TipsResourcesActivity"
+            android:exported="false" />
+        <activity
             android:name=".bottom_nav"
             android:exported="false" />
         <activity
             android:name=".Dashboard"
-            android:exported="false" />
-        <activity
-            android:name=".dashboard"
             android:exported="false" />
         <activity
             android:name=".SignUpActivity"
